src/renderer/App.css
/*
 * @NOTE: Prepend a `~` to css file paths that are in your node_modules
 *        See https://github.com/webpack-contrib/sass-loader#imports
 */
body {
  position: relative;
  color: white;
  height: 100vh;
  background: linear-gradient(
    200.96deg,
    black -29.09%,
    #111 51.77%,
    #106ba3 129.35%
  );
  font-family: sans-serif;
  overflow-y: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}

#main-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#loading-icon {
  margin-top: 60px;
}

#loading-text {
  position:fixed;
  bottom:0;
  left:0;
  margin: 15px;
}

